# xkcd-viewer

./: .gitignore  CMakeLists.txt  README.org
src/: CMakeLists.txt  gui.cpp  gui.h  main.cpp
src/ui/: gui.ui
src/widgets/: graphicsscene.cpp  graphicsscene.h  graphicsview.cpp
